--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,11 @@ add_library(${PROJECT_NAME}::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
 
 target_include_directories(${PROJECT_NAME} PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/>
-  $<INSTALL_INTERFACE:minLib>  # <prefix>/include/mylib
+  $<INSTALL_INTERFACE:minLib>  ${CMAKE_SOURCE_DIR} # <prefix>/include/mylib
 )
+
+ $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/mylib>
+  $<INSTALL_INTERFACE:include/minLib>  # <prefix>/include/mylib
 
 add_executable(${PROJECT_NAME}_app app app/main.cpp)
 
