--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,14 @@
 cmake_minimum_required(VERSION 3.23)
 project(minLib CXX)
-
+include(cmake/common.cmake)
 
 add_library(${PROJECT_NAME} STATIC src/minLib.cpp include/minLib.h)
 add_library(${PROJECT_NAME}::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
-
 
 target_include_directories(${PROJECT_NAME} PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/>
   $<INSTALL_INTERFACE:minLib>  ${CMAKE_SOURCE_DIR} # <prefix>/include/mylib
 )
-
- $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/mylib>
-  $<INSTALL_INTERFACE:include/minLib>  # <prefix>/include/mylib
 
 add_executable(${PROJECT_NAME}_app app app/main.cpp)
 
