--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,7 @@ cmake_minimum_required(VERSION 3.23)
 project(minLib CXX)
 include(cmake/common.cmake)
 
-add_library(${PROJECT_NAME} STATIC 
-     
-       
-)
+add_library(${PROJECT_NAME} STATIC)
 add_library(${PROJECT_NAME}::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
 
 target_include_directories(${PROJECT_NAME} PUBLIC
